added instruction transalation for memory game

--- a/FrontEnd/termi-project/public/locales/ar/translation.json
+++ b/FrontEnd/termi-project/public/locales/ar/translation.json
@@ -97,8 +97,44 @@
              ]
             
             
+        },
+        "memory-game":{
+           "start-game": "بدء اللعبة",
+            "modalTitle": "التعليمات",
+            "title":"لعبة الذاكرة",
+            "goBack": "عودة",
+            "description":"لعبة الكلمات حيث تختار التعريف وتختار المصطلح الصحيح له وتحصل على نقاط للإجابات الصحيحة",
+            "continueToGame": "الإستمرار لللعب",
+                        
+              "step-by-step": [
+         	{
+         		"id": "step1",
+         		"text": "انقر فوق زر \"ابدأ اللعبة\" لبدء اللعبة."
+         	},
+         	{
+         		"id": "step2",
+         		"text": "اقرأ التعريانقر على المربعات الرمادية ، والصغير هو المصطلح ، والمربع الكبير سيكون التعريف قصير المدى.."
+         	},
+         	{
+         		"id": "step3",
+         		"text": "انقر فوالنقر فوق المصطلح وتعريفه سيتطابق مع كلا المربعين.."
+         	},
+         	{
+         		"id": "step4",
+         		"text": "إذا كاإذا كانت إجابتك صحيحة ، فسيظل المصطلح المعروض بتعريفه الصحيح قائمًا.."
+         	},
+             {
+                "id": "step5",
+                "text": "سيتم الانتقال تلإنهاء اللعبة حسب الخطوات السابقة.."
+                },
+                {
+                "id": "step6",
+                "text": "في نهفي نهاية اللعبة ، سيتم عرض نتيجتك.."
+                }
+             ]
+            
+            
         }
-    
         
     },
     "note":{
