--- a/FrontEnd/termi-project/public/locales/he/translation.json
+++ b/FrontEnd/termi-project/public/locales/he/translation.json
@@ -123,6 +123,41 @@
                         
                         ]
         }
+        ,
+        "memory-game":{
+            "start-game": "התחל משחק",
+        "modalTitle": "הנחיות",
+        "title":"משחק זיכרון",
+        "goBack": "חזור אחורה",
+        "description":"משחק מילים בו אתה בוחר הגדרה ובוחר את המונח הנכון עבור זה ואת הנקודות עבור תשובות נכונות",
+        "continueToGame": "המשך למשחק",
+            "step-by-step": [
+                            {
+                            "id": "step1",
+                            "text": "לחץ על הכפתור 'התחל משחק' כדי להתחיל את המשחק."
+                            },
+                            {
+                            "id": "step2",
+                            "text": "לחץ על התיבות האפורות, הקטנות הן המונח, והתיבה הגדולה היא התיאור הקצר."
+                            },
+                            {
+                            "id": "step3",
+                            "text": "לחיצה על המונח וההגדרה שלו תאם את שני התיבות."
+                            },
+                            {
+                            "id": "step4",
+                            "text": "אם התשובה שלך נכונה, המונח עם ההגדרה הנכונה יעדיף עד כה."
+                            },
+                            {
+                            "id": "step5",
+                            "text": "סיים את המשחק על פי השלבים הקודמים."
+                            },
+                            {
+                     		"id": "step6",
+                     		"text": "בסוף המשחק, ניצפה הציון שלך."
+                     	}
+                     ]
+    }
     },
     "note":{
         "delete" : "מחיקה",
