--- a/FrontEnd/termi-project/public/locales/ar/translation.json
+++ b/FrontEnd/termi-project/public/locales/ar/translation.json
@@ -143,5 +143,8 @@
         "myNote" : "ملاحظتي",
         "title":"عنوان الملاحظة",
         "body": "المحتوى"
+    },
+    "category-selector":{
+        "category": "الفئة"
     }
 }
