--- a/FrontEnd/termi-project/public/locales/he/translation.json
+++ b/FrontEnd/termi-project/public/locales/he/translation.json
@@ -63,101 +63,72 @@
             "goBack": "חזור אחורה",
             "description": "משחק מילים בו אתה בוחר מילה נכונה מרשימה מונחת בהגדרה ומרוויח נקודות עבור תשובות נכונות",
             "continueToGame": "המשך למשחק",
-             "step-by-step": [
-
+            "step-by-step": [
                         {
-                        
-                        "id": "צעד 1",
-                        
-                        "text": "לחץ על הכפתור 'התחל משחק' כדי להתחיל את המשחק."
-                        
+                            "id": "צעד 1",
+                            "text": "לחץ על הכפתור 'התחל משחק' כדי להתחיל את המשחק."
                         },
-                        
                         {
-                        
-                        "id": "צעד 2",
-                        
-                        "text": "קרא את התיאור בתשומת לב ובחר את המילה המתאימה ביותר."
-                        
+                            "id": "צעד 2",
+                            "text": "קרא את התיאור בתשומת לב ובחר את המילה המתאימה ביותר."
                         },
-                        
                         {
-                        
-                        "id": "צעד 3",
-                        
-                        "text": "לחץ על התשובה הנבחרת שלך כדי לשלוח אותה."
-                        
+                            "id": "צעד 3",
+                            "text": "לחץ על התשובה הנבחרת שלך כדי לשלוח אותה."
                         },
-                        
                         {
-                        
-                        "id": "צעד 4",
-                        
-                        "text": "אם התשובה שלך נכונה, תקבל נקודה. אם היא לא נכונה, לא תקבל נקודה."
-                        
+                            "id": "צעד 4",
+                            "text": "אם התשובה שלך נכונה, תקבל נקודה. אם היא לא נכונה, לא תקבל נקודה."
                         },
-                        
                         {
-                        
-                        "id": "צעד 5",
-                        
-                        "text": "המשחק ימשיך לשאלה הבאה באופן אוטומטי."
-                        
+                            "id": "צעד 5",
+                            "text": "המשחק ימשיך לשאלה הבאה באופן אוטומטי."
                         },
-                        
                         {
-                        
                         "id": "צעד 6",
-                        
                         "text": "חזור על צעדים 2-5 עד לסיום כל 10 השאלות."
-                        
                         },
-                        
                         {
-                        
                         "id": "צעד 7",
-                        
                         "text": "בסוף המשחק, יוצג הניקוד שלך."
-                        
                         }
-                        
-                        ]
+                            ]
         }
         ,
         "memory-game":{
             "start-game": "התחל משחק",
-        "modalTitle": "הנחיות",
-        "title":"משחק זיכרון",
-        "goBack": "חזור אחורה",
-        "description":"משחק מילים בו אתה בוחר הגדרה ובוחר את המונח הנכון עבור זה ואת הנקודות עבור תשובות נכונות",
-        "continueToGame": "המשך למשחק",
+            "modalTitle": "הנחיות",
+            "title":"משחק זיכרון",
+            "goBack": "חזור אחורה",
+            "description":"משחק מילים בו אתה בוחר הגדרה ובוחר את המונח הנכון עבור זה ואת הנקודות עבור תשובות נכונות",
+            "continueToGame": "המשך למשחק",
             "step-by-step": [
-                            {
-                            "id": "step1",
-                            "text": "לחץ על הכפתור 'התחל משחק' כדי להתחיל את המשחק."
-                            },
-                            {
-                            "id": "step2",
-                            "text": "לחץ על התיבות האפורות, הקטנות הן המונח, והתיבה הגדולה היא התיאור הקצר."
-                            },
-                            {
-                            "id": "step3",
-                            "text": "לחיצה על המונח וההגדרה שלו תאם את שני התיבות."
-                            },
-                            {
-                            "id": "step4",
-                            "text": "אם התשובה שלך נכונה, המונח עם ההגדרה הנכונה יעדיף עד כה."
-                            },
-                            {
-                            "id": "step5",
-                            "text": "סיים את המשחק על פי השלבים הקודמים."
-                            },
-                            {
-                     		"id": "step6",
-                     		"text": "בסוף המשחק, ניצפה הציון שלך."
+                        {
+                        "id": "step1",
+                        "text": "לחץ על הכפתור 'התחל משחק' כדי להתחיל את המשחק."
+                        },
+                        {
+                        "id": "step2",
+                        "text": "לחץ על התיבות האפורות, הקטנות הן המונח, והתיבה הגדולה היא התיאור הקצר."
+                        },
+                        {
+                        "id": "step3",
+                        "text": "לחיצה על המונח וההגדרה שלו תאם את שני התיבות."
+                        },
+                        {
+                        "id": "step4",
+                        "text": "אם התשובה שלך נכונה, המונח עם ההגדרה הנכונה יעדיף עד כה."
+                        },
+                        {
+                        "id": "step5",
+                        "text": "סיים את המשחק על פי השלבים הקודמים."
+                        },
+                        {
+                 		"id": "step6",
+                 		"text": "בסוף המשחק, ניצפה הציון שלך."
                      	}
-                     ]
-    }
+                    ]
+        }
     },
     "note":{
         "delete" : "מחיקה",
@@ -165,5 +136,9 @@
         "myNote" : "הערות שלי",
         "title":"כותרת הערה",
         "body": "תוכן"
+    },
+    "category-selector":{
+        "category": "קטגוריה"
     }
+    
 }
