--- a/FrontEnd/termi-project/public/locales/ar/translation.json
+++ b/FrontEnd/termi-project/public/locales/ar/translation.json
@@ -143,6 +143,17 @@
                 }
              ]
 
+        },
+        "hangman-game":{
+            "start-game": "Start Game",
+              "modalTitle": "Instruction",
+              "title":"Hangman Game",
+               "goBack": "Go Back",
+               "description":"Hangman game description goes here",
+                "continueToGame": "Continue To Game",
+                        "score":"Score",
+                        "not":"Number of Tries",
+                        "pg":"Points Gained"
         }
         
     },
