--- a/FrontEnd/termi-project/public/locales/en/translation.json
+++ b/FrontEnd/termi-project/public/locales/en/translation.json
@@ -145,11 +145,11 @@
               "modalTitle": "Instruction",
               "title":"Hangman Game",
                "goBack": "Go Back",
-               "description":"Hangman game description goes here",
+               "description":"Hangman description goes here",
                 "continueToGame": "Continue To Game",
                         "score":"Score",
                         "not":"Number of Tries",
-                        "pg":"Points Gained",
+                        "pg":"Points Gained"
         }
     },
     "note":{
