--- a/FrontEnd/termi-project/public/locales/en/translation.json
+++ b/FrontEnd/termi-project/public/locales/en/translation.json
@@ -31,7 +31,8 @@
         "forgot_password":"Forgot Password",
         "text":"Enter your email to reset password.",
         "email":"Email",
-        "reset_password":"Reset Password"
+        "reset_password":"Reset Password",
+        "check_inbox":"Please check your inbox for further instructions on how to reset your password. An email has been sent to your registered email address"
     },
     "search":{
         "title": "Control Your Search",
@@ -54,66 +55,69 @@
         "game-content":"Identifies and progress through games"
     },
     "games":{
+        "playButton": "Play Game",
+        "instructionsButton": "Game Instructions",
+        "backButton": "Back",
         "backword-definition":{
             "start-game": "Start Game",
             "question-info": "Question {{currentQuestion}}",
             "score": "You scored {{score}} out of {{questionsLength}}",
-              "modalTitle": "Instruction",
-              "title":"BackWord Definitions",
-               "goBack": "Go Back",
-               "description":"Word game where you choose correct word from list given definition and earn points for correct answers",
-                "continueToGame": "Continue To Game",
-                "scoretitle":"Score",
-                "et":"Elapsed Time",
-                 "pg":"Points Gained",
-                 "timere":"Time remaining",
-                 "seconds":"Seconds",
-                 "wronganswer":"The correct Answer was",
-                 "correctanswer":"Correct!",
-                 "timeout":"TIME OUT",
-             "step-by-step": [
-             	{
-             		"id": "step1",
-             		"text": "Click the \"Start Game\" button to begin the game."
+            "modalTitle": "Instructions",
+            "title":"BackWord Definitions",
+            "goBack": "Go Back",
+            "description":"Word game where you choose correct word from list given definition and earn points for correct answers",
+            "continueToGame": "Continue To Game",
+            "scoretitle":"Score",
+            "et":"Elapsed Time",
+            "pg":"Points Gained",
+            "timere":"Time remaining",
+            "seconds":"Seconds",
+            "wronganswer":"The correct Answer was",
+            "correctanswer":"Correct!",
+            "timeout":"TIME OUT",
+            "step-by-step": [
+                {
+                	"id": "step1",
+                	"text": "Click the \"Start Game\" button to begin the game."
+                },
+                {
+                	"id": "step2",
+                	"text": "Read the definition carefully and choose the word that best matches it."
+                },
+                {
+                	"id": "step3",
+                	"text": "Click on your selected answer to submit it."
+                },
+                {
+                	"id": "step4",
+                	"text": "If your answer is correct, you will receive a point. If it is incorrect, you will not receive a point."
+                },
+                {
+                    "id": "step5",
+                	"text": "The game will move on to the next question automatically."
              	},
              	{
-             		"id": "step2",
-             		"text": "Read the definition carefully and choose the word that best matches it."
-             	},
-             	{
-             		"id": "step3",
-             		"text": "Click on your selected answer to submit it."
-             	},
-             	{
-             		"id": "step4",
-             		"text": "If your answer is correct, you will receive a point. If it is incorrect, you will not receive a point."
-             	},
-             	{
-             		"id": "step5",
-             		"text": "The game will move on to the next question automatically."
-             	},
-             	{
-             		"id": "step6",
-             		"text": "Repeat steps 2-5 until you have completed all 10 questions."
-             	},
-             	{
-             		"id": "step7",
-             		"text": "At the end of the game, your score will be displayed."
-             	}
-             ]
+                	"id": "step6",
+                	"text": "Repeat steps 2-5 until you have completed all 10 questions."
+                },
+                {
+                	"id": "step7",
+                    "text": "At the end of the game, your score will be displayed."
+                }
+            ]
         },
         "memory-game":{
             "start-game": "Start Game",
-              "modalTitle": "Instruction",
-              "title":"Memory Game",
-               "goBack": "Go Back",
-               "description":"Word game where you choose definition and choose the correct term for it and earn points for correct answers",
-                "continueToGame": "Continue To Game",
-                        "score":"Score",
-                        "not":"Number of Tries",
-                        "pg":"Points Gained",
-             "step-by-step": [
-             	{
+            "modalTitle": "Instruction",
+            "title":"Memory Game",
+            "goBack": "Go Back",
+            "description":"Word game where you choose definition and choose the correct term for it and earn points for correct answers",
+            "continueToGame": "Continue To Game",
+            "score":"Score",
+            "not":"Number of Tries",
+            "pg":"Points Gained",
+            "step-by-step": [
+                {
              		"id": "step1",
              		"text": "Click the \"Start Game\" button to begin the game."
              	},
@@ -138,7 +142,7 @@
              		"id": "step6",
              		"text": "At the end of the game, your score will be displayed."
              	}
-             ]
+            ]
         },
         "hangman-game":{
             "start-game": "Start Game",
