--- a/FrontEnd/termi-project/public/locales/ar/translation.json
+++ b/FrontEnd/termi-project/public/locales/ar/translation.json
@@ -56,9 +56,8 @@
     },
     
     "games":{
-        "playButton": "العب اللعبة",
-        "instructionsButton": "تعليمات اللعبة",
-        "backButton": "الرجوع",
+        "play-button": "العب اللعبة",
+        "back-button": "الرجوع",
         "backword-definition":{
            "start-game": "ابدأ اللعبة",
             "question-info": "سؤال {{currentQuestion}}",
@@ -155,9 +154,39 @@
                "goBack": "Go Back",
                "description":"Hangman description goes here",
                 "continueToGame": "Continue To Game",
-                        "score":"Score",
-                        "not":"Number of Tries",
-                        "pg":"Points Gained"
+                "score":"Score",
+                "not":"Number of Tries",
+                "pg":"Points Gained",
+                "step-by-step": [
+                {
+                	"id": "step1",
+                	"text": "Click the \"Start Game\" button to begin the game."
+                },
+                {
+                	"id": "step2",
+                	"text": "Read the definition carefully and choose the word that best matches it."
+                },
+                {
+                	"id": "step3",
+                	"text": "Click on your selected answer to submit it."
+                },
+                {
+                	"id": "step4",
+                	"text": "If your answer is correct, you will receive a point. If it is incorrect, you will not receive a point."
+                },
+                {
+                    "id": "step5",
+                	"text": "The game will move on to the next question automatically."
+             	},
+             	{
+                	"id": "step6",
+                	"text": "Repeat steps 2-5 until you have completed all 10 questions."
+                },
+                {
+                	"id": "step7",
+                    "text": "At the end of the game, your score will be displayed."
+                }
+            ]
         }
     },
     "note":{
@@ -182,6 +211,9 @@
         "s_def-he"   :"تعريف قصير (عبري)",
         "s_def-en"   :"تعريف قصير (انجليزي)",
         "s_def-ar"   :"تعريف قصير (عربي)",
+        "l_def-he"   :"تعريف طويل (عبري)",
+        "l_def-en"   :"تعريف طويل (انجليزي)",
+        "l_def-ar"   :"تعريف طويل (عربي)",
         "sbtn":"اقترح",
           "rbtn":"اعادة تعيين"
     },
