Adding more translations

--- a/FrontEnd/termi-project/public/locales/ar/translation.json
+++ b/FrontEnd/termi-project/public/locales/ar/translation.json
@@ -226,8 +226,8 @@
             "phone":"هاتف",
             "email":"بريد ",
             "points":"نقاط",
-            "search-counter":"عدد البحث",
-            "sugges-counter":"عدد الاقترحات",
+            "searches":"بحث",
+            "suggestions":"اقترحات",
             "mfullname":"اسم كامل",
             "mphonenumber":"نمرة الهاتف",
             "mcategory":"فئة",
