--- a/FrontEnd/termi-project/public/locales/en/translation.json
+++ b/FrontEnd/termi-project/public/locales/en/translation.json
@@ -221,8 +221,8 @@
             "phone":"Phone",
             "email":"Email",
             "points":"Points",
-            "search-counter":"Search Counter",
-            "sugges-counter":"Suggest Counter",
+            "searches":"Searches",
+            "suggestions":"Suggestions",
             "mfullname":"Full Name",
             "mphonenumber":"Phone Number",
             "mcategory":"Category",
