--- a/FrontEnd/termi-project/public/locales/he/translation.json
+++ b/FrontEnd/termi-project/public/locales/he/translation.json
@@ -223,8 +223,8 @@
             "phone":"טלפון",
             "email":"דואר ",
             "points":"נקודות",
-            "search-counter":"מספר חיפושים",
-            "sugges-counter":"מספר הצעות",
+            "searches":"חיפושים",
+            "suggestions":"הצעות",
             "mfullname":"שם מלא",
             "mphonenumber":"מספר טלפון",
             "mcategory":"קטגוריה",
